# rtvc

./: BUILD.gn  DEPS  README.md
add_on/: BUILD.gn  content_patterns.cc  content_patterns.h
api/: BUILD.gn  adapted_peer_connection_interface.h  create_peerconnection_factory.cc  create_peerconnection_factory.h  peer_connection_interface.h
examples/: BUILD.gn
examples/peerconnection/client/: conductor.cc
patches/: config.json
patches/libsrtp/: 0001-fix-build-with-openssl.patch
patches/usrsctp/: .patches  0001-fix-build-with-openssl.patch
patches/webrtc/: .patches  0001-fix-build-with-msvc.patch  0002-sdp-addon.patch
rtc/: BUILD.gn  audio_engine_delegate.cc  audio_engine_delegate.h  peer_connection.h  transport_delegate.cc  transport_delegate.h  video_channel_delegate.h  video_engine_delegate.cc  video_engine_delegate.h  video_transport_delegate.cc  video_transport_delegate.h  yealink_media_engine.cc  yealink_media_engine.h  yealink_video_engine.cc  yealink_video_engine.h  yealink_voice_engine.cc  yealink_voice_engine.h
rtc/audio/: audio_send_stream.h  audio_session.cc  audio_session.h  audio_state.cc  audio_state.h  audio_transport_impl.cc  audio_transport_impl.h
rtc/video/: avc_session.cc  avc_session.h  video_frame.cc  video_frame.h  video_receive_stream.h  video_send_stream.h  video_sink.cc  video_sink.h  video_source_adapter.cc  video_source_adapter.h  video_track_source.cc  video_track_source.h  yealink_video_frame.cc  yealink_video_frame.h  yealink_video_sink.cc  yealink_video_sink.h  yealink_video_source_adapter.cc  yealink_video_source_adapter.h  yealink_video_track_source.cc  yealink_video_track_source.h
script/: apply_all_patches.py  build_android.sh  build_ios.sh  build_linux.sh  build_mac.sh  build_win.bat  build_win_clang.bat  build_win_msvc.bat  combine_libraries.sh
sdk/objc/: Info.plist
