import("//build/config/linux/pkg_config.gni")
import("//build/config/sanitizers/sanitizers.gni")
import("//webrtc.gni")

if (rtc_enable_protobuf) {
  import("//third_party/protobuf/proto_library.gni")
}

if (is_android) {
  import("//build/config/android/config.gni")
  import("//build/config/android/rules.gni")
}

group("yealink") {
  testonly = true
  deps = [
    ":rtc_base",
    ":audio_device",
  ]
}

rtc_static_library("rtc_base") {
  complete_static_lib = true
  suppressed_configs += [ "//build/config/compiler:thin_archive" ]
  deps = [
    "//rtc_base",
  ]
}

rtc_static_library("audio_device") {
  complete_static_lib = true
  suppressed_configs += [ "//build/config/compiler:thin_archive" ]
  deps = [
    "//modules/audio_device"
  ]
}
