import("//webrtc.gni")

group("rtc") {
  testonly = true
  deps = [
    ":media_engine",
    ":media_video",
  ]
}

rtc_source_set("media_engine") {
  testonly = true
  visibility = [ "*" ]
  sources = [
    "yealink_media_engine.h",
    "yealink_media_engine.cc",
    "yealink_video_engine.h",
    "yealink_video_engine.cc",
    "yealink_voice_engine.h",
    "yealink_voice_engine.cc",
  ]
  deps = [
    "//media:rtc_audio_video",
  ]
}

rtc_source_set("media_video") {
  testonly = true
  visibility = [ "*" ]
  sources = [
    "video/yealink_video_frame.h",
    "video/yealink_video_frame.cc",
    "video/yealink_video_sink.h",
    "video/yealink_video_sink.cc",
    "video/yealink_video_source_adapter.h",
    "video/yealink_video_source_adapter.cc",
    "video/yealink_video_track_source.h",
    "video/yealink_video_track_source.cc",
  ]
  deps = [
    "//media:rtc_media_base",
  ]
}
