import("//webrtc.gni")

group("rtc") {
  testonly = true
  deps = [
    ":media_engine",
    ":media_video",
  ]
}

rtc_source_set("media_engine") {
  testonly = true
  visibility = [ "*" ]
  sources = [
    "yealink_media_engine.h",
    "yealink_media_engine.cc",
    "yealink_video_engine.h",
    "yealink_video_engine.cc",
    "yealink_voice_engine.h",
    "yealink_voice_engine.cc",
    "video_engine_delegate.h",
    "video_engine_delegate.cc",
    "transport_delegate.h",
    "transport_delegate.cc",
  ]
  deps = [
    "//media:rtc_audio_video",
  ]
}

rtc_source_set("media_video") {
  testonly = true
  visibility = [ "*" ]
  sources = [
    "video/avc_session.h",
    "video/avc_session.cc",
    "video/video_frame.h",
    "video/video_frame.cc",
    "video/video_sink.h",
    "video/video_sink.cc",
    "video/video_source_adapter.h",
    "video/video_source_adapter.cc",
    "video/video_track_source.h",
    "video/video_track_source.cc",
  ]
  deps = [
    "//media:rtc_media_base",
  ]
}
